tests/machine/x/ocaml/group_by_multi_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_multi_join.ml", line 29, characters 66-68:
29 | let partsupp : record3 list = [{ part = 100; supplier = 1; cost = 10; qty = 2 };{ part = 100; supplier = 2; cost = 20; qty = 1 };{ part = 200; supplier = 1; cost = 5; qty = 3 }]
                                                                       ^^
Error: This expression has type int but an expression was expected of type
         float
  Hint: Did you mean `10.'?


Context (around line 29):
  27 | let nations : record1 list = [{ id = 1; name = "A" };{ id = 2; name = "B" }]
  28 | let suppliers : record2 list = [{ id = 1; nation = 1 };{ id = 2; nation = 2 }]
  29 | let partsupp : record3 list = [{ part = 100; supplier = 1; cost = 10; qty = 2 };{ part = 100; supplier = 2; cost = 20; qty = 1 };{ part = 200; supplier = 1; cost = 5; qty = 3 }]
  30 | let filtered : (string * Obj.t) list list = (let __res0 = ref [] in
  31 |   List.iter (fun ps ->
